--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anastasiya Trypuz</title>
 
     <!--    Bootstrap CSS -->
@@ -12,6 +11,7 @@
     <link rel="stylesheet" href="scss/style.scss">
     <!--    CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1", maximum-scale=1>
     <!--    Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <!--    Font MFizz-->
@@ -76,7 +76,7 @@
         <div id="about-me__text">
             <p>Nazywam się Anastasiya Trypuz i jestem początkującym Front-End Developerem. </p>
             <p>5 lat temu przeprowadziłam się z Białorusi do Polski, gdzie podjęłam studia w Szkole Głównej Handlowej. Niestety po kilku semestrach doszłam do wniosku, że Finanse i Rachunkowość nie jest moją pasją, w związku z czym zaczęłam szukać innej drogi samorealizacji. </p> 
-            <p>Kiedy za pierszym razem napisałam kilka bardzo prostych linijek kodu, zdałam sobie sprawę, iż jest coś w czym chciałabym siebie spróbować. W ciągu ostatnich kilku miesięcy ciągle pozyskiwałam i pogłębiałam wiedzę na temat podstawowych technologii Front End  oraz ukończyłam kurs Akademii 108, w związku z czym śmiało mogę powiedzieć, że jest to kierunek, w którym zamierzam rozwijać się dalej i w którym widzę swoją dalszą karierę. </p>
+            <p>Kiedy za pierwszym razem napisałam kilka bardzo prostych linijek kodu, zdałam sobie sprawę, iż jest coś w czym chciałabym siebie spróbować. W ciągu ostatnich kilku miesięcy ciągle pozyskiwałam i pogłębiałam wiedzę na temat podstawowych technologii Front End  oraz ukończyłam kurs Akademii 108, w związku z czym śmiało mogę powiedzieć, że jest to kierunek, w którym zamierzam rozwijać się dalej i w którym widzę swoją dalszą karierę. </p>
             <p>Nie boję się nowych rzeczy i jestem gotowa do intensywnej oraz skutecznej pracy i nauki. </p>
             
             <a href="files/CV_Anastasiya_Trypuz.pdf" target="_blank" class="btn__cv">Pobierz CV</a>
