--- a/portfolio-section/website-template/index.html
+++ b/portfolio-section/website-template/index.html
@@ -93,7 +93,7 @@
                 <div class="single-portfolio-item">
                     <div class="portfolio-image-container">
                         <div class="portfolio-image" id="portfolio-image-1">
-                            <div class="portfolio-image-mask">
+                            <div class="portfolio-image-mask hovered">
                                 <i class="fas fa-plus"></i>
                             </div>
                         </div>
