Contact section change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="https://linkedin.com/in/anastasiya-trypuz/" target="_blank" class="nav__icon"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/anastasiya-trypuz/Anastasiya_Trypuz" target="_blank" class="nav__icon"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://github.com/anastasiya-trypuz/Website_Anastasiya_Trypuz" target="_blank" class="nav__icon"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
     </div>
@@ -212,52 +212,29 @@
 
 <!-- Section "Contact"-->
 <section id="contact">
+    <h2 class="contact__title">Kontakt</h2>
 
-    <!-- Left side -->
-    <div class="contact__left-section">
-        <h2 class="contact__title">Kontakt</h2>
-        
-        <div class="contact__info">
-            <div class="contact__icon">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-            </div>
-            <p class="contact__text">Warszawa, Polska</p>
+    <div class="contact__info">
+        <i class="fa fa-map-marker contact__icon" aria-hidden="true"></i>
+        <p class="contact__text">Warszawa, Polska</p>
 
-            <div class="contact__icon">
-                <i class="fas fa-envelope" aria-hidden="true"></i>
-            </div>
-            <a href="mailto:anastasiya.trypuz@gmail.com" class="contact__mail">anastasiya.trypuz@gmail.com</a>
+        <i class="fas fa-envelope contact__icon" aria-hidden="true"></i>
+        <a href="mailto:anastasiya.trypuz@gmail.com" class="contact__mail">anastasiya.trypuz@gmail.com</a>
 
-            <div class="contact__icon">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-            </div>
-            <p class="contact__text">+48 505 026 171</p>
-        </div>
-
-        <div class="contact__icons">
-            <a href="https://linkedin.com/in/anastasiya-trypuz/" target="_blank">
-                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-            </a>
-            <a href="https://github.com/anastasiya-trypuz/Anastasiya_Trypuz" target="_blank">
-                <i class="fab fa-github" aria-hidden="true"></i>
-            </a>
-        </div>
+        <i class="fa fa-phone contact__icon" aria-hidden="true"></i>
+        <p class="contact__text">+48 505 026 171</p>
     </div>
-    <!-- End of left side -->
-   
-    <!-- Right side -->
-    <div class="contact__right-section">
-        <form action="https://formspree.io/anastasiya.trypuz@gmail.com" method="POST">
-            <input type="text" name="imie-nazwisko" placeholder="Imię i Nazwisko" id="userName">
-            <input type="email" name="_replyto" placeholder="Email" id="userEmail">
-            <textarea name="wiadomosc" cols="30" rows="10" placeholder="Wiadomość (max 200 znaków) ...." maxlength="200"></textarea>
-            <button type="submit" class="btn__submit">Wyślij</button>
-        </form>
+
+    <div class="contact__icons">
+        <a href="https://linkedin.com/in/anastasiya-trypuz/" target="_blank">
+            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+        </a>
+        <a href="https://github.com/anastasiya-trypuz/Website_Anastasiya_Trypuz" target="_blank">
+            <i class="fab fa-github" aria-hidden="true"></i>
+        </a>
     </div>
-    <!-- End of right side -->
-    
 </section> 
-    <!-- End of section "Contact"-->
+<!-- End of section "Contact"-->
    
 <!-- Footer -->
 <footer>
