Fixed spelling errors, have changed contact section design

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div id="about-me__description">
         <div id="about-me__text">
             <p>Nazywam się Anastasiya Trypuz i jestem początkującym Front-End Developerem. </p>
-            <p>5 lat temu przeprowadziłam się z Białorusi do Polski, gdzie podjęłam studia w Szkole Głównej Handlowej. Niestety po kilku semestrach doszłam do wniosku, że Finanse i Rachunkowość nie jest moją pasją, w związku z czym zaczęłam szukać innej drogi samorealizacji. </p> 
-            <p>Kiedy za pierwszym razem napisałam kilka bardzo prostych linijek kodu, zdałam sobie sprawę, iż jest coś w czym chciałabym siebie spróbować. W ciągu ostatnich kilku miesięcy ciągle pozyskiwałam i pogłębiałam wiedzę na temat podstawowych technologii Front End  oraz ukończyłam kurs Akademii 108, w związku z czym śmiało mogę powiedzieć, że jest to kierunek, w którym zamierzam rozwijać się dalej i w którym widzę swoją dalszą karierę. </p>
+            <p>5 lat temu przeprowadziłam się z Białorusi do Polski, gdzie podjęłam studia w Szkole Głównej Handlowej. Niestety, po kilku semestrach doszłam do wniosku, że finanse i rachunkowość nie są moją pasją, w związku z czym zaczęłam szukać innej drogi samorealizacji. </p> 
+            <p>Kiedy za pierwszym razem napisałam kilka bardzo prostych linijek kodu, zdałam sobie sprawę, iż jest coś, w czym chciałabym spróbować swoich sił. W ciągu ostatnich kilku miesięcy ciągle pozyskiwałam i pogłębiałam wiedzę na temat podstawowych technologii Front End  oraz ukończyłam kurs Akademii 108, w związku z czym śmiało mogę powiedzieć, że jest to kierunek, w którym zamierzam rozwijać się dalej i w którym widzę swoją dalszą karierę. </p>
             <p>Nie boję się nowych rzeczy i jestem gotowa do intensywnej oraz skutecznej pracy i nauki. </p>
             
             <a href="files/CV_Anastasiya_Trypuz.pdf" target="_blank" class="btn__cv">Pobierz CV</a>
@@ -222,7 +222,8 @@
         <a href="mailto:anastasiya.trypuz@gmail.com" class="contact__mail">anastasiya.trypuz@gmail.com</a>
 
         <i class="fa fa-phone contact__icon" aria-hidden="true"></i>
-        <p class="contact__text">+48 505 026 171</p>
+<!--        <p class="contact__text">+48 505 026 171</p>-->
+        <a href="tel:+40505026171">+48 505 026 171</a>
     </div>
 
     <div class="contact__icons">
